# sec-select

./: README.md
solution/openclaw-cca/: Makefile  README_CN.md
solution/openclaw-cca/docs/: usage_guide.md
solution/openclaw-cca/scripts/: openclaw-create-volume.sh  openclaw-rbc-unlock.sh
solution/openclaw-cca/systemd/: openclaw.service
solutions/confidential-migvm/: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  aarch64-qemu.ld  minimal_test.ld
solutions/confidential-migvm/.cargo/: config.toml
solutions/confidential-migvm/docs/: CODE_FLOW.md  aarch64_port_summary.md  virtio_mmio_plan.md
solutions/confidential-migvm/docs/debug/: debug_logs.md  debug_methods.md
solutions/confidential-migvm/docs/platform/: cca_virtcca.md  gic.md  mm_memory.md  timer_trng.md
solutions/confidential-migvm/sh_script/: qemu.sh
solutions/confidential-migvm/src/: acpi.rs  fdt.rs  lib.rs  logger.rs  main.rs  minimal_test.S  network.rs  pci.rs  rsi.rs  time.rs  trng.rs  tsi.rs
solutions/confidential-migvm/src/arch/: apic.rs  exception.S  idt.rs  init.rs  mod.rs  timer.rs
solutions/confidential-migvm/src/mm/: heap.rs  layout.rs  mod.rs  paging.rs  shared.rs
solutions/confidential-migvm/src/virtio/: device.rs  mmio_regs.rs  mmio_transport.rs  mod.rs  net.rs  virtio_pci.rs  vsock.rs
solutions/kunpeng_tpm/: README.md
solutions/kunpeng_tpm/src/: Makefile  spi_drv.c  spi_drv.h  test_tpm.c  tpm_driver_api.c  tpm_driver_api.h  tpm_driver_cmd.c  tpm_driver_cmd.h  tpm_driver_common.c  tpm_driver_common.h  tpm_driver_gpio.c  tpm_driver_gpio.h  tpm_driver_ops.c  tpm_driver_ops.h  tpm_driver_spi_reg_v1.h  tpm_driver_spi_v1.c  tpm_driver_spi_v1.h  tpm_driver_util.h  tpm_driver_v2_interface.h
solutions/openclaw-cca/: README.md
solutions/openclaw-cca/scripts/: gen_policy.py  openclaw-init.sh
solutions/openclaw-cca/scripts/policy_template/: cca.rego  vcca.rego
solutions/openclaw-cca/skills/openclaw-cca-attest/: SKILL.md
solutions/openclaw-cca/skills/openclaw-cca-attest/scripts/: attest.sh
solutions/openclaw-cca/skills/openclaw-vcca-attest/: SKILL.md
solutions/openclaw-cca/skills/openclaw-vcca-attest/scripts/: attest.sh
solutions/openclaw-cca/src/extend_tools/: attest.c
solutions/openclaw-cca/systemd/: openclaw-luks-unlock.service
solutions/secafs/: .gitignore  MANUAL.md  README.md  README_CN.md  SPEC.md  TESTING.md  docker-compose.dev.yml
solutions/secafs/cli/: CONTRIBUTING.md  Cargo.toml  build.rs
solutions/secafs/cli/perf/: simulate-npm-workload.sh
solutions/secafs/cli/perf/syscall/: run.sh
solutions/secafs/cli/scripts/: mount.fuse.secafs
solutions/secafs/cli/src/: fuse.rs  lib.rs  main.rs  nfs.rs  opts.rs
solutions/secafs/cli/src/cmd/: completions.rs  exec.rs  fs.rs  init.rs  mcp_server.rs  migrate.rs  mod.rs  mount.rs  mount_stub.rs  nfs.rs  ps.rs  run.rs  run_darwin.rs  run_linux.rs  run_not_supported.rs  run_windows.rs  serve_api.rs  sync.rs  timeline.rs
solutions/secafs/cli/src/fuser/: mod.rs  session.rs
solutions/secafs/cli/src/fuser/mnt/: fuse_pure.rs
solutions/secafs/cli/src/mount/: fuse.rs  mod.rs  nfs.rs
solutions/secafs/cli/src/nfsserve/: nfs_handlers.rs
solutions/secafs/cli/src/rpc/: backend.rs  codec.rs  methods.rs  mod.rs  tests.rs  types.rs
solutions/secafs/cli/src/sandbox/: darwin.rs  linux.rs  linux_ptrace.rs  mod.rs
solutions/secafs/cli/tests/: all.sh  fs_volumes_schema.rs  migration_downgrade.rs  rpc_backend_live.rs  serve_api_smoke.rs  snapshot_rpc.rs  test-init.sh  test-linux-syscalls.sh  test-mount.sh  test-overlay-delta-in-base-dir.sh  test-overlay-whiteout.sh  test-run-experimental-syscalls.sh  test-run-syscalls.sh  test-symlinks.sh  volume_helpers.rs
solutions/secafs/cli/tests/syscall/: Makefile  main.c  test-common.h
solutions/secafs/integrations/openclaw/: INTEGRATION.md  README.md  RUNBOOK.md
solutions/secafs/integrations/openclaw/bridge/: bridge.mjs  run-stack.sh  secafs-ns.sh
solutions/secafs/sandbox/: Cargo.toml
solutions/secafs/sandbox/src/: lib.rs
solutions/secafs/sandbox/src/vfs/: mod.rs  mount.rs
solutions/secafs/scripts/: demo-cli-test1.sh  dev-down.sh  dev-up.sh  e2e-cli-postgres.sh  install-deps.sh  opengauss-init.sql  test-opengauss.sh  test-postgres.sh  update-version.py
solutions/secafs/sdk/python/: .gitignore  MANIFEST.in  README.md  pyproject.toml
solutions/secafs/sdk/python/examples/: filesystem_demo.py  kvstore_demo.py  toolcalls_demo.py
solutions/secafs/sdk/python/secafs_sdk/: __init__.py  db.py  filesystem.py  guards.py  kvstore.py  secafs.py  toolcalls.py
solutions/secafs/sdk/python/tests/: __init__.py  conftest.py  test_basic.py  test_filesystem.py  test_integration.py  test_kvstore.py  test_toolcalls.py
solutions/secafs/sdk/rust/: .gitignore  Cargo.toml
solutions/secafs/sdk/rust/benches/: overlayfs.rs  workload.rs
solutions/secafs/sdk/rust/src/: connection_pool.rs  db.rs  error.rs  kvstore.rs  lib.rs  schema.rs  toolcalls.rs
solutions/secafs/sdk/rust/src/filesystem/: hostfs_darwin.rs  hostfs_linux.rs  mod.rs  overlayfs.rs  secafs.rs  volume.rs
solutions/secafs/sdk/rust/src/snapshot/: mod.rs  restore.rs  schema.rs  snapshots.rs  state.rs  triggers.rs  types.rs
solutions/secafs/sdk/rust/tests/: migration_v0_6.rs  snapshot_property.rs
solutions/secafs/sdk/typescript/: .gitignore  package-lock.json  package.json
(+65 files in other folders)
